discussion section done

--- a/app/views/answers/_answers.html.erb
+++ b/app/views/answers/_answers.html.erb
@@ -1,8 +1,22 @@
-<ul>
-<% @discussion.answers.each do |answer| %>
-    <li>
-        <h4><%= answer.content %></h4>
-        <h5>&mdash; <%= get_user(answer.user_id).fname %></h5>
-    </li>
-<% end %>
+<ul class="list-group">
+  <% @discussion.answers.each_with_index do |answer, index| %>
+  <li class="d-flex justify-content-evenly">
+    <div class="col-1 pt-1 d-flex justify-content-end align-items-start">
+      <p class="py-1 px-2 fw-bold bg-warning text-white rounded-circle">
+        <%= index += 1 %>
+      </p>
+    </div>
+    <div class="col-10 d-flex justify-content-between align-items-center list-group-item border-2 border-dark text-start h6 text-dark">
+      <div class="me-2">
+        <%= answer.content %>
+        <p class="fw-normal text-muted ps-2 pt-1">
+          &mdash; by <%= get_user(answer.user_id).fname %>
+        </p>
+      </div>
+      <div class="ms-2">
+        <%= button_to "Delete", [@discussion, answer], { method: :delete, class: "btn btn-danger btn-sm" } %>
+      </div>
+    </div>
+  </li>
+  <% end %>
 </ul>
