--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
   <body>
     <div class="row col-11 mx-auto">
       <%= render "shared/navbar" %>
-      <div class="container mx-auto col-9 text-center"><%= yield %></div>
+      <div class="container col-9 text-center"><%= yield %></div>
     </div>
   </body>
 </html>
