--- a/app/views/discussions/_new.html.erb
+++ b/app/views/discussions/_new.html.erb
@@ -3,17 +3,17 @@
 <%= form_with model: @discussion, url: discussions_path, html: {class: ""} do |form| %>
     <div class="text-start">
         <%= form.label :user_id, class: "form-label ms-1" %><br>
-        <%= form.select :user_id, options_for_select(@users.collect{ |u| [u.fname, u.id] }, 1), {}, { class: "form-select" } %>
+        <%= form.select :user_id, options_for_select(@users.collect{ |u| [u.fname, u.id] }, 1), {}, { class: "form-select border-secondary" } %>
     </div>
     <br>
     <div class="text-start">
-        <%= form.label :region, class: "form-label ms-1" %><br>
-        <%= form.select :region_id, options_for_select(@regions.collect{ |r| [r.name, r.id] }, @location), {}, { class: "form-select" } %>
+        <%= form.label :region_id, class: "form-label ms-1" %><br>
+        <%= form.select :region_id, options_for_select(@regions.collect{ |r| [r.name, r.id] }, @location), {}, { class: "form-select border-secondary" } %>
     </div>
     <br>
     <div class="text-start">
         <%= form.label :content, class: "form-label ms-1" %><br>
-        <%= form.text_area :content, class: "form-control", placeholder: "Type here ..." %>
+        <%= form.text_area :content, class: "form-control border-secondary", placeholder: "Type here ..." %>
     </div>
     <br>
     <div>
