feeds section display

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-    <div class="row col-11 mx-auto">
+    <div class="container-md col-11 mx-auto">
       <%= render "shared/navbar" %>
       <div class="container col-9 text-center"><%= yield %></div>
     </div>
