--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
     <span class="fs-4 mx-auto">Digi Farm</span>
   </a>
   <hr>
-  <ul class="nav nav-pills flex-column mb-auto">
+  <ul class="nav nav-pills flex-column mb-auto col-8 mx-auto">
     <br>
     <li class="nav-item">
       <%= active_link_to "Feeds", feeds_path %>
