--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,4 +1,4 @@
-<div class="row d-flex justify-content-around">
+<div class="row d-flex">
     <div class="col-8 my-5"></div>
     <div class="col-3 border border-dark border-3 me-1 py-5 rounded position-fixed" style="height: 100% !important; top: 0; right: 0">
         <%= render "discussions/trending" %>
