--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,5 +1,13 @@
-<div class="row d-flex">
-    <div class="col-8 my-5"></div>
+<div class="row d-flex justify-content-around">
+    <div class="col-8 my-5 text-start">
+        <p class="h4 fw-bold">Feeds</p>
+        <br />
+        <ul class="list-group">
+            <% @discussions.each do |discussion| %>
+                <li class="list-group-item border-2 border-dark text-start">❇️&emsp;<%= link_to discussion.content, discussion, class: "text-decoration-none" %></li>
+            <% end %>
+        </ul>
+    </div>
     <div class="col-3 border border-dark border-3 me-1 py-5 rounded position-fixed" style="height: 100% !important; top: 0; right: 0">
         <%= render "discussions/trending" %>
     </div>
