--- a/app/views/discussions/_trending.html.erb
+++ b/app/views/discussions/_trending.html.erb
@@ -1,6 +1,6 @@
 <div class="h4 fw-bold">Trending on Discussion</div>
 <br />
-<div class="container border border-secondary border-3 pt-4 fw-bold">
+<div class="container border border-secondary border-3 pt-4 fw-bold rounded shadow">
   <ul class="text-start p-0" style="list-style-type: '#'">
     <% @discussions.each do |discussion| %>
         <li>
