--- a/app/views/answers/_answers.html.erb
+++ b/app/views/answers/_answers.html.erb
@@ -2,11 +2,11 @@
   <% @discussion.answers.each_with_index do |answer, index| %>
   <li class="d-flex justify-content-evenly">
     <div class="col-1 pt-1 d-flex justify-content-end align-items-start">
-      <p class="py-1 px-2 fw-bold bg-warning text-white rounded-circle">
+      <p class="py-1 px-2 fw-bold bg-warning text-white rounded-circle shadow">
         <%= index += 1 %>
       </p>
     </div>
-    <div class="col-10 d-flex justify-content-between align-items-center list-group-item border-2 border-dark text-start h6 text-dark">
+    <div class="col-10 d-flex justify-content-between align-items-center list-group-item border-2 border-dark text-start h6 text-dark rounded shadow">
       <div class="me-2">
         <%= answer.content %>
         <p class="fw-normal text-muted ps-2 pt-1">
