--- a/app/views/feeds/_postView.html.erb
+++ b/app/views/feeds/_postView.html.erb
@@ -1,6 +1,6 @@
 <ul class="list-group">
-  <% @posts.each do |post| %>
-    <li class="list-group-item border border-dark p-0">
+  <% @feeds.each do |post| %>
+    <li class="list-group-item border border-dark p-0 shadow rounded">
         <div class="d-flex border-bottom border-dark m-0 p-2">
             <%= image_tag("shobhit.jpg", size: "50", class: "rounded-circle") %>
             <div class="ps-4">
@@ -18,9 +18,9 @@
             <%= post.content %>
         </div>
         <div class="d-flex justify-content-evenly p-2 border-top border-dark">
-            <%= button_tag "✌️ Good", { class: "btn btn-primary btn-sm fw-bold" }  %>
-            <%= button_tag "💬 Comments", { class: "btn btn-secondary btn-sm fw-bold" }  %>
-            <%= button_tag "⏩ Share", { class: "btn btn-dark btn-sm fw-bold" }  %>
+            <%= button_tag "✌️ Good", { class: "btn btn-outline-primary btn-sm fw-bold" }  %>
+            <%= link_to "💬 Comments", post, class: "btn btn-outline-primary btn-sm fw-bold" %>
+            <%= button_tag "⏩ Share", { class: "btn btn-outline-dark btn-sm fw-bold" }  %>
         </div>
     </li>
     <br />
