--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -1,5 +1,5 @@
 <div class="row d-flex justify-content-around">
-  <div class="col-8 my-5">
+  <div class="col-8 my-5 px-lg-5">
     <div class="text-start">
       <div class="h4">❇️&emsp;<%= @discussion.content %></div>
       <p class="text-muted ps-2">
