--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
     <title>DigiFarm</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
+    <%= javascript_include_tag "application", "data-turbolinks-track": "reload" %>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -20,7 +21,7 @@
   </head>
 
   <body>
-    <div class="container-md col-11 mx-auto">
+    <div class="container-fluid mx-auto">
       <%= render "shared/navbar" %>
       <div class="container col-9 text-center"><%= yield %></div>
     </div>
