--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="col-12">
-    <%= form_for([@post, @post.comments.build], html: { class: "d-flex justify-content-between align-items-end" }) do |form| %>
+    <%= form_for([@feed, @feed.comments.build], html: { class: "d-flex justify-content-between align-items-end" }) do |form| %>
         <div class="text-start">
             <%= form.label :user_id, class: "form-label ms-1" %><br>
             <%= form.select :user_id, options_for_select(@users.collect{ |u| [u.fname, u.id] }, 1), {}, { class: "form-select border-secondary" } %>
