--- a/app/views/feeds/_feeds.html.erb
+++ b/app/views/feeds/_feeds.html.erb
@@ -1,7 +1,7 @@
-<ul class="list-group">
+<ul class="list-group px-lg-5">
   <% @feeds.each do |post| %>
-    <li class="list-group-item border border-dark p-0 shadow rounded">
-        <div class="d-flex border-bottom border-dark m-0 p-2">
+    <%= link_to post, class: "list-group-item border border-dark p-0 shadow rounded" do %>
+        <div class="d-flex border-bottom border-dark m-0 p-2 text-start">
             <%= image_tag("shobhit.jpg", size: "50", class: "rounded-circle") %>
             <div class="ps-4">
                 <span class="fw-bold">
@@ -19,10 +19,13 @@
         </div>
         <div class="d-flex justify-content-evenly p-2 border-top border-dark">
             <%= button_tag "✌️ Good", { class: "btn btn-outline-primary btn-sm fw-bold" }  %>
-            <%= link_to "💬 Comments", post, class: "btn btn-outline-primary btn-sm fw-bold" %>
+            <%= button_tag"💬 Comments", { class: "btn btn-outline-primary btn-sm fw-bold" } %>
             <%= button_tag "⏩ Share", { class: "btn btn-outline-dark btn-sm fw-bold" }  %>
         </div>
-    </li>
+        <div id="commentForm" class="hide">
+            <p>comment form</p>
+        </div>
+    <% end %>
     <br />
   <% end %>
 </ul>
