--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,8 +1,8 @@
 <div class="row d-flex justify-content-around">
-    <div class="col-8 my-5 text-start">
+    <div class="col-8 my-5 px-lg-5 text-start">
         <p class="h4 fw-bold">Feeds</p>
         <br />
-        <%= render "feeds/postView" %>
+        <%= render "feeds/feeds" %>
     </div>
     <div class="col-3 border border-dark border-3 me-1 py-5 rounded position-fixed" style="height: 100% !important; top: 0; right: 0">
         <%= render "discussions/trending" %>
