--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,7 +1,7 @@
 <div class="col-12 mx-auto d-flex justify-content-end mt-5">
     <div class="col-2 mx-auto"></div>
     <div class="col-10 d-flex">
-        <div class="col-6 d-flex flex-column my-5 mx-auto ms-5 border border-dark p-0 shadow rounded" style="height: 50% !important;">
+        <div class="col-6 d-flex flex-column my-5 mx-auto ms-5 border border-dark p-0 shadow rounded" style="height: 500px !important;">
             <div class="d-flex border-bottom border-dark m-0 p-2 text-start">
                 <%= image_tag("shobhit.jpg", size: "50", class: "rounded-circle") %>
                 <div class="ps-4">
