--- a/app/views/feeds/_feeds.html.erb
+++ b/app/views/feeds/_feeds.html.erb
@@ -1,6 +1,6 @@
 <ul class="list-group px-lg-5">
-  <% @feeds.each do |post| %>
-    <%= link_to post, class: "list-group-item border border-dark p-0 shadow rounded" do %>
+  <% @feeds.each_with_index do |post, index| %>
+    <li class="list-group-item border border-dark p-0 shadow rounded">
         <div class="d-flex border-bottom border-dark m-0 p-2 text-start">
             <%= image_tag("shobhit.jpg", size: "50", class: "rounded-circle") %>
             <div class="ps-4">
@@ -14,18 +14,18 @@
                 </span>
             </div>
         </div>
-        <div class="d-flex justify-content-center p-2">
+        <%= link_to post, class: "d-flex justify-content-center p-2 text-decoration-none" do %>
             <%= post.content %>
-        </div>
+        <% end %>
         <div class="d-flex justify-content-evenly p-2 border-top border-dark">
             <%= button_tag "✌️ Good", { class: "btn btn-outline-primary btn-sm fw-bold" }  %>
-            <%= button_tag"💬 Comments", { class: "btn btn-outline-primary btn-sm fw-bold" } %>
+            <%= button_tag "💬 Comments", { class: "btn btn-outline-primary btn-sm fw-bold", onclick: "openCommentForm('comment-form-#{index}')" } %>
             <%= button_tag "⏩ Share", { class: "btn btn-outline-dark btn-sm fw-bold" }  %>
         </div>
-        <div id="commentForm" class="hide">
-            <p>comment form</p>
-        </div>
-    <% end %>
+        <%= content_tag(:div, id: "comment-form-#{index}", class: "hide") do %>
+            <%= render "comments/form", post: post %>
+        <% end %>
+    </li>
     <br />
   <% end %>
 </ul>
