--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -2,6 +2,8 @@
     <div class="col-8 my-5 px-lg-5 text-start">
         <p class="h4 fw-bold">Feeds</p>
         <br />
+        <%= render "feeds/new" %>
+        <br />
         <%= render "feeds/feeds" %>
     </div>
     <div class="col-3 border border-dark border-3 me-1 py-5 rounded position-fixed" style="height: 100% !important; top: 0; right: 0">
