--- a/app/views/feeds/_feeds.html.erb
+++ b/app/views/feeds/_feeds.html.erb
@@ -10,7 +10,9 @@
                 </span>
                 <br />
                 <span class="text-muted">
-                    <%= post.created_at.strftime("%d/%m/%Y %I:%M %p") %>
+                    <% Time.use_zone("Kolkata") do  %>
+                        <%= post.created_at.strftime("%d/%m/%Y %I:%M %p") %>
+                    <% end %>
                 </span>
             </div>
         </div>
