--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,7 +22,7 @@
     </li>
     <br>
     <li class="nav-item">
-      <%= active_link_to "Info Hub", infohubs_path %>
+      <%= active_link_to "Info Hub", infohub_path %>
     </li>
     <br>
     <li class="nav-item">
