--- a/app/views/feeds/_feeds.html.erb
+++ b/app/views/feeds/_feeds.html.erb
@@ -21,7 +21,7 @@
         <% end %>
         <div class="d-flex justify-content-evenly p-2 border-top border-dark">
             <%= button_tag "✌️ Good", { class: "btn btn-outline-primary btn-sm fw-bold", id: "reaction-button-#{index}", onclick: "toggleReactionButton('reaction-button-#{index}')" }  %>
-            <%= button_tag "💬 Comments", { class: "btn btn-outline-primary btn-sm fw-bold", onclick: "openCommentForm('comment-form-#{index}')" } %>
+            <%= button_tag "💬 Comments", { class: "btn btn-outline-primary btn-sm fw-bold", id: "comment-button-#{index}", onclick: "openCommentForm('#{index}')" } %>
             <%= mail_to "", "⏩ Share", subject: "I wanted you to see this post", body: "Check out this post #{request.original_url}/#{post.id}.\n", class: "btn btn-outline-dark btn-sm fw-bold" %>
         </div>
         <%= content_tag(:div, id: "comment-form-#{index}", class: "border-top border-dark p-2 hide") do %>
