--- a/app/views/infohubs/show.html.erb
+++ b/app/views/infohubs/show.html.erb
@@ -1,2 +1,9 @@
-<h1>Infohubs#show</h1>
-<p>Find me in app/views/infohubs/show.html.erb</p>
+<div class="row d-flex justify-content-around">
+    <div class="col-8 my-5 px-lg-5 text-start">
+        <p class="h4 fw-bold">Info Hub</p>
+        <br />
+    </div>
+    <div class="col-3 border border-dark border-3 me-1 py-5 rounded position-fixed" style="height: 100% !important; top: 0; right: 0">
+        <%= render "infohubs/productivity" %>
+    </div>
+</div>
