minor update infohub section

--- a/app/views/infohubs/show.html.erb
+++ b/app/views/infohubs/show.html.erb
@@ -2,6 +2,8 @@
     <div class="col-8 my-5 px-lg-5 text-start">
         <p class="h4 fw-bold">Info Hub</p>
         <br />
+        <p class="border border-secondary border-3 rounded p-2">Production</p>
+        <%= render "infohubs/form" %>
     </div>
     <div class="col-3 border border-dark border-3 me-1 py-5 rounded position-fixed" style="height: 100% !important; top: 0; right: 0">
         <%= render "infohubs/productivity" %>
