--- a/app/views/infohubs/show.html.erb
+++ b/app/views/infohubs/show.html.erb
@@ -6,6 +6,6 @@
         <%= render "infohubs/form" %>
     </div>
     <div class="col-3 border border-dark border-3 me-1 py-5 rounded position-fixed" style="height: 100% !important; top: 0; right: 0">
-        <%= render "infohubs/productivity" %>
+        <%= render "infohubs/sidebar" %>
     </div>
 </div>
