--- a/app/views/infohubs/show.html.erb
+++ b/app/views/infohubs/show.html.erb
@@ -5,7 +5,7 @@
         <p class="border border-secondary border-3 rounded p-2">Production</p>
         <%= render "infohubs/form" %>
     </div>
-    <div class="col-3 border border-dark border-3 me-1 py-5 rounded position-fixed" style="height: 100% !important; top: 0; right: 0">
+    <div class="col-3 border border-dark border-3 me-1 py-5 rounded position-fixed" style="height: 100% !important; top: 0; right: 0; overflow-y: scroll !important;">
         <%= render "infohubs/sidebar" %>
     </div>
 </div>
