--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,14 @@
 @import "bootstrap";
 
+html, body {
+    height: 100% !important;
+}
+
+* {
+    overflow-x: hidden;
+    max-width: 100% !important;
+}
+
 .hide {
     display: none !important;
 }
