--- a/app/views/infohubs/show.html.erb
+++ b/app/views/infohubs/show.html.erb
@@ -2,8 +2,16 @@
     <div class="col-8 my-5 px-lg-5 text-start">
         <p class="h4 fw-bold">Info Hub</p>
         <br />
-        <p class="border border-secondary border-3 rounded p-2">Production</p>
-        <%= render "infohubs/form" %>
+        <p class="border border-secondary border-3 rounded p-2 mb-0 fw-bold">Production</p>
+        <div class="border border-secondary border-3 rounded p-2 mt-0">
+            <%= render "infohubs/form" %>
+            <br />
+            <br />
+            <div id="display-value" class="d-flex flex-column align-items-center justify-content-center">
+                <p class="fs-4 text-decoration-underline">Result</p>
+                <%= render "infohubs/result" %>
+            </div>
+        </div>
     </div>
     <div class="col-3 border border-dark border-3 me-1 py-5 rounded position-fixed" style="height: 100% !important; top: 0; right: 0; overflow-y: scroll !important;">
         <%= render "infohubs/sidebar" %>
