--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
       crossorigin="anonymous"
     />
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -20,10 +22,7 @@
     ></script>
   </head>
 
-  <body>
-    <div class="container-fluid mx-auto">
-      <%= render "shared/navbar" %>
-      <div class="container col-9 text-center"><%= yield %></div>
-    </div>
+  <body class="col-12 d-flex">
+    <%= yield %>
   </body>
 </html>
