discussions+feeds refactoring done

--- a/app/views/answers/_answers.html.erb
+++ b/app/views/answers/_answers.html.erb
@@ -1,4 +1,4 @@
-<ul class="list-group">
+<ul class="list-group col-9 mx-auto">
   <% @discussion.answers.each_with_index do |answer, index| %>
   <li class="d-flex justify-content-evenly">
     <div class="col-1 pt-1 d-flex justify-content-end align-items-start">
@@ -6,16 +6,20 @@
         <%= index += 1 %>
       </p>
     </div>
-    <div class="col-10 d-flex justify-content-between align-items-center list-group-item border-2 border-dark text-start h6 text-dark rounded shadow">
-      <div class="me-2">
+    <div class="col-10 d-flex justify-content-between align-items-center list-group-item border-2 border-dark text-start fs-6 text-dark rounded shadow">
+      <div class="col-10">
         <%= answer.content %>
         <p class="fw-normal text-muted ps-2 pt-1">
-          &mdash; by <%= get_user(answer.user_id).fname %>
+          &mdash; by <%= get_user(answer.user_id).first_name %>
         </p>
       </div>
-      <div class="ms-2">
-        <%= button_to "Delete", [@discussion, answer], { method: :delete, class: "btn btn-danger btn-sm" } %>
-      </div>
+      <% if answer.user_id == Current.user.id %>
+        <div class=col-2">
+          <%= button_to "Delete", [@discussion, answer], { method: :delete, class: "btn btn-danger btn-sm" } %>
+        </div>
+      <% else %>
+        <div class="col-2"></div>
+      <% end %>
     </div>
   </li>
   <% end %>
