--- a/app/views/discussions/_trending.html.erb
+++ b/app/views/discussions/_trending.html.erb
@@ -1,4 +1,4 @@
-<div class="h4 fw-bold">Trending on Discussion</div>
+<div class="fs-4 text-center fw-bold">Trending on Discussion</div>
 <br />
 <div class="container border border-secondary border-3 pt-4 fw-bold rounded shadow">
   <ul class="text-start p-0" style="list-style-type: '#'">
