--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -1,9 +1,10 @@
-<div class="row d-flex justify-content-around">
-  <div class="col-8 my-5 px-lg-5">
-    <div class="text-start">
-      <div class="h4">❇️&emsp;<%= @discussion.content %></div>
+<div class="col-3"></div>
+<div class="col-9 d-flex">
+  <div class="col-8 my-5">
+    <div class="text-start col-9 mx-auto">
+      <div class="fs-4">❇️&emsp;<%= @discussion.content %></div>
       <p class="text-muted ps-2">
-        &emsp;&emsp;&emsp;&mdash; by <%= get_user(@discussion.user_id).fname %>
+        &emsp;&emsp;&emsp;&mdash; by <%= get_user(@discussion.user_id).first_name %>
       </p>
     </div>
     <div class="d-flex justify-content-around fs-6">
@@ -13,14 +14,11 @@
     <br>
     <hr class="pt-1">
     <%= render "answers/answers" %>
-    <hr class="pt-1" />
     <br>
     <%= render "answers/form" %>
   </div>
-  <div
-    class="border border-dark border-3 col-3 py-5 rounded position-fixed"
-    style="height: 100% !important; top: 0; right: 0"
-  >
+  <div class="col-4"></div>
+  <div class="border-start border-dark border-3 col-3 py-5 px-4 position-fixed" style="height: 100% !important; top: 0; right: 0" >
     <%= render "discussions/new" %>
   </div>
 </div>
