--- a/app/views/feeds/_new.html.erb
+++ b/app/views/feeds/_new.html.erb
@@ -1,17 +1,12 @@
-<div class="col-12 border border-dark rounded shadow p-3">
-    <div class="h5 text-center">New Post</div>
+<div class="col-10 border border-dark rounded shadow py-3">
+    <div class="fs-5 fw-bold text-center">New Post</div>
     <hr />
-    <%= form_with model: @feed, html: { class: "d-flex justify-content-between align-items-end" } do |form| %>
+    <%= form_with model: @feed, class: "d-flex justify-content-evenly" do |form| %>
+        <%= form.hidden_field :user_id, value: Current.user.id %>
         <div class="text-start">
-            <%= form.label :user_id, class: "form-label ms-1" %><br>
-            <%= form.select :user_id, options_for_select(@users.collect{ |u| [u.fname, u.id] }, 1), {}, { class: "form-select border-secondary" } %>
+            <!-- <%= form.label :content, class: "form-label ms-1" %><br> -->
+            <%= form.text_area :content, rows: 3, cols: 50, class: "form-control border-secondary", placeholder: "Type here  ..." %>
         </div>
-        <br />
-        <div class="text-start">
-            <%= form.label :content, class: "form-label ms-1" %><br>
-            <%= form.text_area :content, rows: 1, cols: 50, class: "form-control border-secondary", placeholder: "Type here  ..." %>
-        </div>
-        <br />
         <div>
             <%= form.submit "Submit", class: "btn btn-primary fw-bold" %>
         </div>
