--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -1,32 +1,30 @@
-<div class="col-12 mx-auto d-flex justify-content-end mt-5">
-    <div class="col-2 mx-auto"></div>
-    <div class="col-10 d-flex">
-        <div class="col-6 d-flex flex-column my-5 mx-auto ms-5 border border-dark p-0 shadow rounded" style="height: 500px !important;">
-            <div class="d-flex border-bottom border-dark m-0 p-2 text-start">
-                <%= image_tag("shobhit.jpg", size: "50", class: "rounded-circle") %>
-                <div class="ps-4">
-                    <span class="fw-bold">
-                        <% user = get_user @feed.user_id %>
-                        <%= user.fname + " " + user.lname %>
-                    </span>
-                    <br />
-                    <span class="text-muted">
-                        <%= @feed.created_at.strftime("%d/%m/%Y %I:%M %p") %>
-                    </span>
-                </div>
-            </div>
-            <div class="d-flex flex-grow-1 justify-content-center align-items-center p-2">
-                <%= @feed.content %>
-            </div>
-            <div class="d-flex justify-content-evenly p-2 border-top border-dark">
-                <%= button_tag "✌️ Good", { class: "btn btn-outline-primary btn-sm fw-bold", id: "reaction-button-#{@feed.id}", onclick: "toggleReactionButton('reaction-button-#{@feed.id}')" }  %>
-                <%= button_tag "⏩ Share", { class: "btn btn-outline-dark btn-sm fw-bold" }  %>
+<div class="col-3"></div>
+<div class="col-9 d-flex justify-content-evenly mt-5">
+    <div class="col-4 d-flex flex-column my-5 border border-dark p-0 shadow rounded" style="height: 500px !important;">
+        <div class="d-flex border-bottom border-dark m-0 p-2 text-start">
+            <%= image_tag("shobhit.jpg", size: "50", class: "rounded-circle") %>
+            <div class="ps-4">
+                <span class="fw-bold">
+                    <% user = get_user @feed.user_id %>
+                    <%= user.first_name + " " + user.last_name %>
+                </span>
+                <br />
+                <span class="text-muted">
+                    <%= @feed.created_at.strftime("%d/%m/%Y %I:%M %p") %>
+                </span>
             </div>
         </div>
-        <div class="col-6 my-5 mx-5 text-start">
-            <p class="h5">Comments</p>
-            <br />
-            <%= render "comments/comments" %>
+        <div class="d-flex flex-grow-1 justify-content-center align-items-center p-2">
+            <%= @feed.content %>
         </div>
+        <div class="d-flex justify-content-evenly p-2 border-top border-dark">
+            <%= button_tag "✌️ Good", { class: "btn btn-outline-primary btn-sm fw-bold", id: "reaction-button-#{@feed.id}", onclick: "toggleReactionButton('reaction-button-#{@feed.id}')" }  %>
+            <%= button_tag "⏩ Share", { class: "btn btn-outline-dark btn-sm fw-bold" }  %>
+        </div>
+    </div>
+    <div class="col-4 my-5 text-start">
+        <p class="fs-5 fw-bold">Comments</p>
+        <br />
+        <%= render "comments/comments" %>
     </div>
 </div>
