--- a/app/views/infohubs/_sidebar.html.erb
+++ b/app/views/infohubs/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<p class="h5 fw-bold text-decoration-underline text-uppercase">Know the soil</p>
+<p class="fs-5 text-center fw-bold text-decoration-underline text-uppercase">Know the soil</p>
 <div class="container border border-secondary border-3 pt-2 rounded shadow" >
   <table class="table table-success table-striped shadow">
     <thead>
@@ -37,13 +37,13 @@
 </div>
 <br />
 <br />
-<p class="h5 fw-bold text-decoration-underline text-uppercase">Tips to increase soil productivity</p>
+<p class="fs-5 text-center fw-bold text-decoration-underline text-uppercase">Tips to increase soil productivity</p>
 <div class="container border border-secondary border-3 pt-4 fw-bold rounded shadow" >
-  <ul class="text-start" style="list-style-type: '+ '">
-    <li class="pb-2">&emsp;Add Compost</li>
-    <li class="pb-2">&emsp;Get a soil test</li>
-    <li class="pb-2">&emsp;Mulch the soil surface</li>
-    <li class="pb-2">&emsp;Prevent soil compaction</li>
-    <li class="pb-2">&emsp;Rotate crops each year</li>
+  <ul class="text-start">
+    <li class="pb-2">Add Compost</li>
+    <li class="pb-2">Get a soil test</li>
+    <li class="pb-2">Mulch the soil surface</li>
+    <li class="pb-2">Prevent soil compaction</li>
+    <li class="pb-2">Rotate crops each year</li>
   </ul>
 </div>
