--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,5 +31,5 @@
     <br>
   </ul>
   <hr>
-  <%= button_to "Sign out", sign_out_path, method: :delete, class: "fs-5 mx-auto btn btn-sm btn-light" %>
+  <%= button_to "Log out", sign_out_path, method: :delete, class: "fs-5 mx-auto btn btn-sm btn-light" %>
 </div>
